Did some spring cleaning - both file- and code-wise. Can now move camera -> drag around, scroll to zoom. Lines are now visible. Text is visible, but not in the right place. Scaling issues? Updated plan and added bat file for starting chrome on my computer

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,19 @@
 body {
-	margin: 0;
-	overflow: hidden;
+    padding-top: 70px;
+}
+
+	#srcArea, #configArea {
+	width: 100%;
+	height: 300px;	
+	font-size: 10px;
+}
+
+.row {
+    margin-bottom: 5px;  
+}
+
+
+
+textarea {
+	resize: none;
 }
